--- a/frontend/public/index.html
+++ b/frontend/public/index.html
@@ -15,6 +15,6 @@
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
-    <div id="root"></div>
+    <div id="root" class="h-100"></div>
   </body>
 </html>
